@@ -5,6 +5,12 @@ MUI Toolbar MCC class - ChangeLog
 $Id$
 $Source$
 
+2005-08-03  Jens Langner <Jens.Langner@light-speed.de>
+
+    * Debug.c,h: fixed incorrect use of KPutFmt() on MorphOS machines in
+      accordance to the changes in TextEditor.mcc. Now our debug output show
+      hopefully also work on MorphOS.
+
 #### v15.12 RELEASE ############################################################
 
 2005-07-19  Jens Langner <Jens.Langner@light-speed.de>
